// 此文件为服务器内部使用，客户端调用无响应
syntax = "proto3";

package pbinner;


// center -> games
// 匹配成功 
message GameMatchSucc {
	uint32 RoomId = 1;  // 房间ID
	repeated uint64 UserIDs = 2;
}

// center -> games
message GameMatchArgsCheckReq {
	uint32 RoomId = 1;  // 房间ID
	uint64 UserID = 2;
}

message GameMatchArgsCheckRsp {
	// 1成功 2无效房间ID 3查询用户失败 4金币限制
	uint32 Code = 1;
	string GameArgMsgName = 2; // 具体游戏message name 如 pbgame_ddz.RoomArg
    bytes GameArgMsgValue = 3; // 具体游戏message value   
}

// gates -> *
enum UserChangeType {	
	NotUse  = 0; 
	Online  = 1; 
	Offline = 2; 	
}

message UserChangeNotif {
	uint64 UserID = 1;
	UserChangeType Typ = 2;
}

message DeskChangeNotif {
	int64 ClubID = 1;
	uint64 DeskID = 2;
	// 1create 2update 3delete
	int32 ChangeTyp = 3;
}
